--- a/Axwabo.Helpers/App.config
+++ b/Axwabo.Helpers/App.config
@@ -6,6 +6,10 @@
                 <assemblyIdentity name="0Harmony" publicKeyToken="null" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-2.2.2.0" newVersion="2.2.2.0"/>
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="NorthwoodLib" publicKeyToken="null" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0"/>
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 </configuration>
