--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -45,37 +45,36 @@
         </Reference>
         <Reference Include="Assembly-CSharp">
             <HintPath>$(EXILED-ASSEMBLIES)\Assembly-CSharp.dll</HintPath>
-            <Private>False</Private>
         </Reference>
         <Reference Include="Assembly-CSharp-firstpass">
             <HintPath>$(EXILED-ASSEMBLIES)\Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
-        <Reference Include="CommandSystem.Core">
-            <HintPath>$(EXILED-ASSEMBLIES)\CommandSystem.Core.dll</HintPath>
+        <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\CommandSystem.Core.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.API, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.API.dll</HintPath>
+        <Reference Include="Exiled.API, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.API.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.CreditTags, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.CreditTags.dll</HintPath>
+        <Reference Include="Exiled.CreditTags, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.CreditTags.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.CustomItems, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.CustomItems.dll</HintPath>
+        <Reference Include="Exiled.CustomItems, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.CustomItems.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.CustomRoles, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.CustomRoles.dll</HintPath>
+        <Reference Include="Exiled.CustomRoles, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.CustomRoles.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.Events, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.Events.dll</HintPath>
+        <Reference Include="Exiled.Events, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.Events.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.Loader, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.Loader.dll</HintPath>
+        <Reference Include="Exiled.Loader, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.Loader.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.Permissions, Version=7.2.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.Permissions.dll</HintPath>
+        <Reference Include="Exiled.Permissions, Version=8.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.Permissions.dll</HintPath>
         </Reference>
         <Reference Include="Exiled.Updater, Version=3.1.2.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\Exiled.Updater.dll</HintPath>
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\Exiled.Updater.dll</HintPath>
         </Reference>
         <Reference Include="Mirror">
             <HintPath>$(EXILED-ASSEMBLIES)\Mirror.dll</HintPath>
@@ -83,11 +82,11 @@
         <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(EXILED-ASSEMBLIES)\Mirror.dll</HintPath>
         </Reference>
-        <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\NorthwoodLib.dll</HintPath>
+        <Reference Include="NorthwoodLib, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\NorthwoodLib.dll</HintPath>
         </Reference>
         <Reference Include="PluginAPI, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\PluginAPI.dll</HintPath>
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\PluginAPI.dll</HintPath>
         </Reference>
         <Reference Include="Pooling">
             <HintPath>$(EXILED-ASSEMBLIES)\Pooling.dll</HintPath>
@@ -103,7 +102,7 @@
             <HintPath>$(EXILED-ASSEMBLIES)\UnityEngine.PhysicsModule.dll</HintPath>
         </Reference>
         <Reference Include="YamlDotNet, Version=11.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
-            <HintPath>..\packages\EXILED.7.2.0-alpha.1\lib\net48\YamlDotNet.dll</HintPath>
+            <HintPath>..\packages\EXILED.8.0.0-beta.1\lib\net48\YamlDotNet.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
